# docs-classifier

./: .gitignore  README.md  classification.py  main.py  ocrs.py  pdf_to_image.py
python/: classification.py  main.py  requirements.txt
rust/: Cargo.toml  download-models.sh
rust/docs-classifier-cli/: Cargo.toml
rust/docs-classifier-cli/src/: main.rs
rust/ocrs/: Cargo.toml  README.md
